--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <!-- List items element -->
                     <li>
                         <!-- Anchor element -->
-                        <a href="#what -we-do">What We Do</a>
+                        <a href="#what-we-do">What We Do</a>
                     </li>
                     <li>
-                        <a href="what-you-do">What You Do</a>
+                        <a href="#what-you-do">What You Do</a>
                     </li>
                     <li>
                         <a href="#your-trainers">Your Trainers</a>
@@ -102,8 +102,43 @@
         </section>
         
         <!-- "meet the trainers" section -->
-        <section id="meet-the-trainers">
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+            <!-- first trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores optio laborum, dolor corporis animi vitae pariatur molestiae officia neque ad aut tempore nesciunt itaque labore? Reiciendis quis rerum illo quisquam.
+                    </p>
+                </div>
+            </article>
+            <!-- second trainer bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endrance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus repellendus eos nisi culpa ipsa quasi totam perferendis iste facere vitae eaque nesciunt recusandae, a itaque. Praesentium natus minima a maiores!
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <!-- third trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" /> 
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et unde nulla molestiae quam debitis ipsa dolore ducimus dolor excepturi quidem, rerum tempore, autem ullam odio sint? Adipisci aliquid debitis quod.
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out" section -->
