--- a/index.html
+++ b/index.html
@@ -142,12 +142,10 @@
         </section>
 
         <!-- "reach out" section -->
-        <section id="reach-out">
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11333.287713343321!2d-93.20771396190182!3d44.75384885480418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1633383270456!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy">
