--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 
         <!-- hero section -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum accusantium delectus soluta cum velit voluptas totam porro! Nihil, beatae. Ex eum explicabo quidem molestiae porro fugit consequuntur animi nostrum sunt?
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
