add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -143,43 +143,45 @@
         </section>
         
         <!-- "meet the trainers" section -->
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
-            <!-- first trainer bio -->
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores optio laborum, dolor corporis animi vitae pariatur molestiae officia neque ad aut tempore nesciunt itaque labore? Reiciendis quis rerum illo quisquam.
-                    </p>
-                </div>
-            </article>
-            <!-- second trainer bio -->
-            <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endrance</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus repellendus eos nisi culpa ipsa quasi totam perferendis iste facere vitae eaque nesciunt recusandae, a itaque. Praesentium natus minima a maiores!
-                    </p>
-                </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
-            </article>
-            <!-- third trainer bio -->
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" /> 
-                <div class="trainer-bio text-left">
-                    <h3>Harry "the Headband" Smith</h3>
-                    <h4>Strength</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et unde nulla molestiae quam debitis ipsa dolore ducimus dolor excepturi quidem, rerum tempore, autem ullam odio sint? Adipisci aliquid debitis quod.
-                    </p>
-                </div>
-            </article>
+            <div class="trainers">
+                <!-- first trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Arron Stephens</h3>
+                        <h4 class="trainer-role">Speed / Strength</h4>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores optio laborum, dolor corporis animi vitae pariatur molestiae officia neque ad aut tempore nesciunt itaque labore? Reiciendis quis rerum illo quisquam.
+                        </p>
+                    </div>
+                </article>
+                <!-- second trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Joanna Gill</h3>
+                        <h4 class="trainer-role">Endrance</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus repellendus eos nisi culpa ipsa quasi totam perferendis iste facere vitae eaque nesciunt recusandae, a itaque. Praesentium natus minima a maiores!
+                        </p>
+                    </div>
+                </article>
+                <!-- third trainer bio -->
+                <article class="trainer">
+                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" /> 
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                        <h4 class="trainer-role">Strength</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et unde nulla molestiae quam debitis ipsa dolore ducimus dolor excepturi quidem, rerum tempore, autem ullam odio sint? Adipisci aliquid debitis quod.
+                        </p>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <!-- "reach out" section -->
